app/globals.css
@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");

* {
  --primary-1: #0b0121;
  --primary-2: #a39bb4;
  --primary-3: #ececec;

  box-sizing: border-box;
}

img {
  pointer-events: none;
  user-select: none;
}

body {
  margin: 0px;
  padding: 0px;
  font-family: "Montserrat", sans-serif;
  background-color: var(--primary-1);
}

